--- a/WorldCupStarVote/package.json
+++ b/WorldCupStarVote/package.json
@@ -2,7 +2,7 @@
   "name": "react-box",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dappdevelop.github.io/DAppDevelop.io/",
+  "homepage": "https://dappdevelop.github.io/2018WorldCupStarVote/",
   "devDependencies": {
     "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
